[gd_scene load_steps=47 format=2]

[ext_resource path="res://src/main/ui/menu/PagedRegionPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/ui/ImageButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/ui/menu/training-high-scores.gd" type="Script" id=3]
[ext_resource path="res://src/main/ui/settings/SettingsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/ui/menu/system-buttons.gd" type="Script" id=5]
[ext_resource path="res://src/main/ui/theme/h4.theme" type="Theme" id=6]
[ext_resource path="res://src/main/ui/ButtonShortcutHelper.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/main/ui/candy-button/gradient-blue-normal.tres" type="Gradient" id=8]
[ext_resource path="res://src/main/ui/level-select/LevelButtonScroller.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/main/ui/menu/drop-panel.tres" type="StyleBox" id=10]
[ext_resource path="res://src/main/ui/ClickCatcher.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/main/ui/squeak/gy/squeak-theme-h4.tres" type="Theme" id=12]
[ext_resource path="res://src/main/ui/HighScoreTable.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/main/ui/theme/h3-font-outline.tres" type="DynamicFont" id=14]
[ext_resource path="res://src/main/ui/menu/PagedLevelPanel.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/main/ui/menu/MenuAccentH3.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/main/ui/menu/menu-accent-h2-s1.png" type="Texture" id=18]
[ext_resource path="res://src/main/ui/squeak/br/squeak-theme-h4.tres" type="Theme" id=19]
[ext_resource path="res://assets/main/ui/candy-button/h3-t-pressed.png" type="Texture" id=20]
[ext_resource path="res://src/main/ui/candy-button/gradient-red-normal.tres" type="Gradient" id=21]
[ext_resource path="res://src/main/ui/menu/region-submenu.gd" type="Script" id=22]
[ext_resource path="res://src/main/ui/candy-button/CandyButtonH3.tscn" type="PackedScene" id=23]
[ext_resource path="res://src/main/ui/menu/level-submenu.gd" type="Script" id=24]
[ext_resource path="res://assets/main/ui/candy-button/h3-t.png" type="Texture" id=25]
[ext_resource path="res://src/main/ui/candy-button/gradient-violet-normal.tres" type="Gradient" id=26]
[ext_resource path="res://assets/main/ui/candy-button/h4-o.png" type="Texture" id=27]
[ext_resource path="res://src/main/ui/candy-button/CandyButtonH4.tscn" type="PackedScene" id=28]
[ext_resource path="res://assets/main/ui/candy-button/h4-q-pressed.png" type="Texture" id=29]
[ext_resource path="res://assets/main/ui/candy-button/h4-q.png" type="Texture" id=30]
[ext_resource path="res://assets/main/ui/touch/close.png" type="Texture" id=31]
[ext_resource path="res://assets/main/ui/touch/close-pressed.png" type="Texture" id=32]
[ext_resource path="res://src/main/ui/menu/training-menu.gd" type="Script" id=33]
[ext_resource path="res://src/main/ui/menu/training-speed-selector.gd" type="Script" id=34]
[ext_resource path="res://assets/main/ui/candy-button/h4-o-pressed.png" type="Texture" id=35]
[ext_resource path="res://src/main/ui/candy-button/gradient-map.shader" type="Shader" id=36]
[ext_resource path="res://src/main/ui/UiMenuShortcut.tres" type="ShortCut" id=37]
[ext_resource path="res://src/main/ui/HSliderGamepadHelper.tscn" type="PackedScene" id=38]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.423529, 0.262745, 0.192157, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="GradientTexture2D" id=6]
resource_local_to_scene = true
gradient = ExtResource( 8 )

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 36 )
shader_param/mix_amount = 1.0
shader_param/gradient = SubResource( 6 )

[sub_resource type="GradientTexture2D" id=8]
resource_local_to_scene = true
gradient = ExtResource( 26 )

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = ExtResource( 36 )
shader_param/mix_amount = 1.0
shader_param/gradient = SubResource( 8 )

[sub_resource type="GradientTexture2D" id=10]
resource_local_to_scene = true
gradient = ExtResource( 21 )

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 36 )
shader_param/mix_amount = 1.0
shader_param/gradient = SubResource( 10 )

[sub_resource type="InputEventAction" id=4]
action = "ui_cancel"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="TrainingMenu" type="Control" groups=["wallpaper_enabled"]]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 33 )
high_scores_path = NodePath("MainMenu/DropPanel/VBoxContainer/HighScores")
level_button_scroller_path = NodePath("MainMenu/DropPanel/VBoxContainer/Level/LevelButtonScroller")
level_description_label_path = NodePath("MainMenu/DropPanel/VBoxContainer/Level/Desc")
speed_selector_path = NodePath("MainMenu/DropPanel/VBoxContainer/Speed")
start_button_path = NodePath("MainMenu/DropPanel/VBoxContainer/System/Start")

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DropPanel" type="Panel" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 10.0
margin_right = -50.0
margin_bottom = -10.0
custom_styles/panel = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/DropPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 14.0
margin_right = -14.0
margin_bottom = -14.0
custom_constants/separation = 5

[node name="Level" type="VBoxContainer" parent="MainMenu/DropPanel/VBoxContainer"]
margin_right = 896.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 160 )

[node name="Title" type="Label" parent="MainMenu/DropPanel/VBoxContainer/Level"]
margin_right = 896.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 14 )
text = "Level"
align = 1
valign = 1

[node name="MenuAccentH3" parent="MainMenu/DropPanel/VBoxContainer/Level/Title" instance=ExtResource( 17 )]
margin_left = -87.5
margin_top = -37.5
margin_right = 87.5
margin_bottom = 37.5
texture = ExtResource( 18 )

[node name="LevelButtonScroller" parent="MainMenu/DropPanel/VBoxContainer/Level" instance=ExtResource( 9 )]
margin_top = 34.0
margin_bottom = 164.0

[node name="Desc" type="Label" parent="MainMenu/DropPanel/VBoxContainer/Level"]
margin_top = 168.0
margin_right = 896.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 6 )
text = "Score 200 points as quickly as possible!"
align = 1
valign = 1

[node name="Speed" type="VBoxContainer" parent="MainMenu/DropPanel/VBoxContainer"]
margin_top = 202.0
margin_right = 896.0
margin_bottom = 284.0
size_flags_vertical = 6
script = ExtResource( 34 )

[node name="Title" type="Label" parent="MainMenu/DropPanel/VBoxContainer/Speed"]
margin_right = 896.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 14 )
text = "Speed"
align = 1
valign = 1

[node name="MenuAccentH3" parent="MainMenu/DropPanel/VBoxContainer/Speed/Title" instance=ExtResource( 17 )]
margin_left = -87.5
margin_top = -37.5
margin_right = 87.5
margin_bottom = 37.5
texture = ExtResource( 18 )

[node name="SliderPanel" type="Panel" parent="MainMenu/DropPanel/VBoxContainer/Speed"]
margin_left = 144.0
margin_top = 34.0
margin_right = 752.0
margin_bottom = 58.0
rect_min_size = Vector2( 608, 24 )
size_flags_horizontal = 4
custom_styles/panel = SubResource( 12 )

[node name="Slider" type="HSlider" parent="MainMenu/DropPanel/VBoxContainer/Speed/SliderPanel" groups=["main_practice_inputs"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -9.0
margin_right = 300.0
margin_bottom = 9.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
theme = ExtResource( 19 )
max_value = 3.0
tick_count = 4

[node name="HSliderGamepadHelper" parent="MainMenu/DropPanel/VBoxContainer/Speed/SliderPanel/Slider" instance=ExtResource( 38 )]
sliding_speed = 6.0

[node name="ClickCatcher" parent="MainMenu/DropPanel/VBoxContainer/Speed/SliderPanel/Slider" instance=ExtResource( 11 )]
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 25.0

[node name="Labels" type="HBoxContainer" parent="MainMenu/DropPanel/VBoxContainer/Speed"]
margin_left = 144.0
margin_top = 62.0
margin_right = 752.0
margin_bottom = 82.0
rect_min_size = Vector2( 608, 0 )
mouse_filter = 2
size_flags_horizontal = 4
theme = ExtResource( 6 )

[node name="Normal" type="Label" parent="MainMenu/DropPanel/VBoxContainer/Speed/Labels"]
margin_right = 99.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "0"

[node name="Hard" type="Label" parent="MainMenu/DropPanel/VBoxContainer/Speed/Labels"]
margin_left = 103.0
margin_right = 302.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "1"
align = 1

[node name="Expert" type="Label" parent="MainMenu/DropPanel/VBoxContainer/Speed/Labels"]
margin_left = 306.0
margin_right = 504.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "2"
align = 1

[node name="Master" type="Label" parent="MainMenu/DropPanel/VBoxContainer/Speed/Labels"]
margin_left = 508.0
margin_right = 608.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "3"
align = 2

[node name="System" type="VBoxContainer" parent="MainMenu/DropPanel/VBoxContainer"]
margin_top = 298.0
margin_right = 896.0
margin_bottom = 428.0
size_flags_vertical = 8
custom_constants/separation = 10
script = ExtResource( 5 )

[node name="Start" parent="MainMenu/DropPanel/VBoxContainer/System" groups=["main_practice_inputs"] instance=ExtResource( 23 )]
material = SubResource( 7 )
margin_left = 348.0
margin_top = 0.0
margin_right = 548.0
margin_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 25 )
text = "Start"
color = 5
shape = 6

[node name="Settings" parent="MainMenu/DropPanel/VBoxContainer/System" groups=["main_practice_inputs"] instance=ExtResource( 28 )]
material = SubResource( 9 )
margin_left = 388.0
margin_top = 60.0
margin_right = 508.0
margin_bottom = 90.0
size_flags_horizontal = 4
size_flags_vertical = 4
shortcut = ExtResource( 37 )
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 35 )
texture_hover = ExtResource( 27 )
text = "Settings"
color = 7
shape = 3

[node name="ShortcutHelper" parent="MainMenu/DropPanel/VBoxContainer/System/Settings" instance=ExtResource( 7 )]
action = "ui_cancel"

[node name="Quit" parent="MainMenu/DropPanel/VBoxContainer/System" groups=["main_practice_inputs"] instance=ExtResource( 28 )]
material = SubResource( 11 )
margin_left = 388.0
margin_top = 100.0
margin_right = 508.0
margin_bottom = 130.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 30 )
texture_pressed = ExtResource( 29 )
texture_hover = ExtResource( 30 )
text = "Back"
color = 1
shape = 5

[node name="Spacer" type="Control" parent="MainMenu/DropPanel/VBoxContainer"]
margin_top = 433.0
margin_right = 896.0
margin_bottom = 443.0
rect_min_size = Vector2( 0, 10 )

[node name="HighScores" type="Panel" parent="MainMenu/DropPanel/VBoxContainer"]
margin_left = 48.0
margin_top = 448.0
margin_right = 848.0
margin_bottom = 552.0
rect_min_size = Vector2( 800, 104 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 12 )
script = ExtResource( 3 )

[node name="Tables" type="HBoxContainer" parent="MainMenu/DropPanel/VBoxContainer/HighScores"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 5.0
margin_right = -20.0
margin_bottom = -5.0
custom_constants/separation = 200

[node name="DailyTable" parent="MainMenu/DropPanel/VBoxContainer/HighScores/Tables" instance=ExtResource( 13 )]
margin_right = 280.0
margin_bottom = 94.0
daily = true

[node name="AllTimeTable" parent="MainMenu/DropPanel/VBoxContainer/HighScores/Tables" instance=ExtResource( 13 )]
margin_left = 480.0
margin_right = 760.0
margin_bottom = 94.0

[node name="RegionSubmenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 22 )
region_buttons_path = NodePath("Panel/VBoxContainer/Top/RegionButtons")

[node name="Backdrop" type="ColorRect" parent="RegionSubmenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )

[node name="Panel" parent="RegionSubmenu" instance=ExtResource( 1 )]

[node name="Buttons" type="Control" parent="RegionSubmenu"]
modulate = Color( 1, 1, 1, 0.627451 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Northeast" type="HBoxContainer" parent="RegionSubmenu/Buttons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -512.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
custom_constants/separation = 10
alignment = 2

[node name="BackButton" parent="RegionSubmenu/Buttons/Northeast" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 402.0
margin_right = 502.0
margin_bottom = 100.0
size_flags_horizontal = 0
shortcut = SubResource( 5 )
icon = ExtResource( 31 )
expand_icon = true
normal_icon = ExtResource( 31 )
pressed_icon = ExtResource( 32 )

[node name="ShortcutHelper" parent="RegionSubmenu/Buttons/Northeast/BackButton" instance=ExtResource( 7 )]
action = "ui_cancel"

[node name="LevelSubmenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 24 )

[node name="Backdrop" type="ColorRect" parent="LevelSubmenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )

[node name="Panel" parent="LevelSubmenu" instance=ExtResource( 15 )]

[node name="Buttons" type="Control" parent="LevelSubmenu"]
modulate = Color( 1, 1, 1, 0.627451 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Northeast" type="HBoxContainer" parent="LevelSubmenu/Buttons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -512.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
custom_constants/separation = 10
alignment = 2

[node name="BackButton" parent="LevelSubmenu/Buttons/Northeast" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 402.0
margin_right = 502.0
margin_bottom = 100.0
size_flags_horizontal = 0
shortcut = SubResource( 5 )
icon = ExtResource( 31 )
expand_icon = true
normal_icon = ExtResource( 31 )
pressed_icon = ExtResource( 32 )

[node name="ShortcutHelper" parent="LevelSubmenu/Buttons/Northeast/BackButton" instance=ExtResource( 7 )]
action = "ui_cancel"

[node name="SettingsMenu" parent="." instance=ExtResource( 4 )]

[connection signal="central_button_changed" from="MainMenu/DropPanel/VBoxContainer/Level/LevelButtonScroller" to="." method="_on_LevelButtonScroller_central_button_changed"]
[connection signal="central_button_pressed" from="MainMenu/DropPanel/VBoxContainer/Level/LevelButtonScroller" to="." method="_on_LevelButtonScroller_central_button_pressed"]
[connection signal="speed_changed" from="MainMenu/DropPanel/VBoxContainer/Speed" to="." method="_on_SpeedSelector_speed_changed"]
[connection signal="value_changed" from="MainMenu/DropPanel/VBoxContainer/Speed/SliderPanel/Slider" to="MainMenu/DropPanel/VBoxContainer/Speed" method="_on_Slider_value_changed"]
[connection signal="pressed" from="MainMenu/DropPanel/VBoxContainer/System/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MainMenu/DropPanel/VBoxContainer/System/Settings" to="SettingsMenu" method="_on_Settings_pressed"]
[connection signal="pressed" from="MainMenu/DropPanel/VBoxContainer/System/Quit" to="MainMenu/DropPanel/VBoxContainer/System" method="_on_Quit_pressed"]
[connection signal="region_chosen" from="RegionSubmenu" to="." method="_on_RegionSubmenu_region_chosen"]
[connection signal="visibility_changed" from="RegionSubmenu" to="." method="_on_RegionSubmenu_visibility_changed"]
[connection signal="region_chosen" from="RegionSubmenu/Panel" to="RegionSubmenu" method="_on_Panel_region_chosen"]
[connection signal="pressed" from="RegionSubmenu/Buttons/Northeast/BackButton" to="RegionSubmenu" method="_on_BackButton_pressed"]
[connection signal="level_chosen" from="LevelSubmenu" to="." method="_on_LevelSelect_level_chosen"]
[connection signal="visibility_changed" from="LevelSubmenu" to="." method="_on_LevelSubmenu_visibility_changed"]
[connection signal="level_chosen" from="LevelSubmenu/Panel" to="LevelSubmenu" method="_on_Panel_level_chosen"]
[connection signal="pressed" from="LevelSubmenu/Buttons/Northeast/BackButton" to="LevelSubmenu" method="_on_BackButton_pressed"]
[connection signal="quit_pressed" from="SettingsMenu" to="MainMenu/DropPanel/VBoxContainer/System" method="_on_Quit_pressed"]
